--- a/Satellite_segmentation_prediction_GradioUI.ipynb
+++ b/Satellite_segmentation_prediction_GradioUI.ipynb
@@ -169,8 +169,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "b1ad9eed-bf5e-42bb-a3b8-119f6b875072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "62a88707-931f-4fc2-8f6b-bc6364a3cb80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# my_app=gr.Blocks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "a0d596a7-4984-4567-aec7-a958a72c1d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_input_image(image_source):\n",
+    "    # image=image_source\n",
+    "    # if image_source.mode == 'RGBA':\n",
+    "        # image_source = image_source.convert('RGB')\n",
+    "    # image=image.resize((256,256))\n",
+    "    # plt.imshow(image)\n",
+    "    # image=np.array(image)\n",
+    "    if image_source.shape[2]==4:\n",
+    "        image_source=image_source[:,:,:3]\n",
+    "    image_tensor = tf.convert_to_tensor(image_source, dtype=tf.float32)\n",
+    "    image_resized = tf.image.resize(image_tensor, [256, 256])\n",
+    "    image=np.expand_dims(image_source,0)\n",
+    "    image_resized = tf.expand_dims(image_resized, axis=0)\n",
+    "    \n",
+    "    prediction=saved_model.predict(image_resized)\n",
+    "    predicted_image=np.argmax(prediction,axis=3)\n",
+    "    predicted_image=predicted_image[0,:,:]\n",
+    "    print(predicted_image)\n",
+    "    predicted_image=predicted_image*50\n",
+    "    return 'Predicted Mask Image',predicted_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "f0b1b48d-41c6-4e1c-b569-80b50879dc9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def load_image(image):\n",
+    "#     pil_image = Image.fromarray(image)\n",
+    "#     if pil_image.mode == 'RGBA':\n",
+    "#         pil_image = pil_image.convert('RGB')\n",
+    "#     return np.array(pil_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "15cd29c4-707a-4535-a243-731e9a67962d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_app=gr.Blocks()\n",
+    "with my_app:\n",
+    "    gr.Markdown('Image processing application UI with Gradio')\n",
+    "    with gr.Tabs():\n",
+    "        with gr.TabItem('select your image'):\n",
+    "            with gr.Row():\n",
+    "                with gr.Column():\n",
+    "                    img_source=gr.Image(label='please select soruce Image') #height=256,width=256\n",
+    "                    source_image_loader=gr.Button('Load above Image')\n",
+    "                with gr.Column():\n",
+    "                    output_label=gr.Label(label='Image Info')\n",
+    "                    img_output=gr.Image(label='Image Output')\n",
+    "        source_image_loader.click(\n",
+    "            process_input_image,\n",
+    "            [\n",
+    "                img_source\n",
+    "            ],\n",
+    "            [\n",
+    "                output_label,\n",
+    "                img_output\n",
+    "            ]\n",
+    "         )        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "12380f9c-f415-4dcb-b05e-ae904f63ee24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7876\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7876/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "[[3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 3]\n",
+      " ...\n",
+      " [3 3 3 ... 1 1 1]\n",
+      " [3 3 3 ... 1 1 1]\n",
+      " [3 3 3 ... 1 1 1]]\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "[[3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 1]\n",
+      " [3 3 3 ... 3 3 1]\n",
+      " ...\n",
+      " [1 1 1 ... 1 1 1]\n",
+      " [1 1 1 ... 1 1 1]\n",
+      " [1 1 1 ... 1 1 1]]\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "[[3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 3]\n",
+      " ...\n",
+      " [3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 3]\n",
+      " [3 3 3 ... 3 3 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_app.close()\n",
+    "my_app.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7056f0d-5d17-47f4-b422-abfb043f9aec",
    "metadata": {},
    "outputs": [],
    "source": []
